change vh to dvh

--- a/src/app/pages/main/main-page.component.html
+++ b/src/app/pages/main/main-page.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="container">
-    <div class="row rounded-5 border vh-100">
+    <div class="row rounded-5 border app-main-page__content">
       <app-map-game
         class="col-12 col-md-8 p-0 rounded-5 overflow-hidden h-100"
       ></app-map-game>
