--- a/src/app/pages/options/options-page.component.html
+++ b/src/app/pages/options/options-page.component.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="row rounded-5 border">
       <div
-        class="d-flex flex-column align-items-center justify-content-center min-vh-100 rounded-5 border"
+        class="d-flex flex-column align-items-center justify-content-center options-page__content rounded-5 border"
       >
         <div class="row w-100">
           <h1 class="h4 text-center mt-3">
