--- a/src/app/pages/start/start-page.component.html
+++ b/src/app/pages/start/start-page.component.html
@@ -6,9 +6,14 @@
   <div class="container">
     <div class="row rounded-5 border">
       <div
-        class="d-flex flex-column align-items-center justify-content-center vh-100 rounded-5 border"
+        class="d-flex flex-column align-items-center justify-content-center start-page__content rounded-5 border"
       >
-        <button type="button" class="mb-1" tuiButton [routerLink]="['/main']">
+        <button
+          type="button"
+          class="mb-1 mt-3"
+          tuiButton
+          [routerLink]="['/main']"
+        >
           {{
             [ctx.language, content.START_PAGE_CONFIG_START_BTN]
               | func : getContentByLanguage
